<resources>
    <string name="app_name">gFive</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="deck">Deck</string>
    <string name="overview">Overview</string>
    <string name="enter_your_deck_name">Enter your deck name</string>
    <string name="add_deck">Add Deck</string>
    <string name="edite_deck">edite deck</string>
    <string name="delete_deck">delete deck</string>
    <string name="play_deck">play deck</string>
    <string name="card_question">card question :</string>
    <string name="card_answer">card answer :</string>
    <string name="add_card">Add Card</string>
    <string name="write_your_answer_here">write your answer here</string>
    <string name="write_your_question_here">write your question here</string>
    <string name="delete_card">delete card</string>
    <string name="play">play</string>
    <string name="show_answer">show answer</string>
    <string name="i_know_the_answer">I know</string>
    <string name="i_don_t_know">I don\'t know</string>
    <string name="well_done">Well Done !</string>
    <string name="there_are_no_questions_to_answer">There are no questions to answer</string>
    <string name="let_s_start">Let\'s Start</string>
    <string name="remember_everything">Remember everything</string>
    <string name="today_cards">Today Cards :</string>
    <string name="total_cards">Total Cards :</string>
    <string name="total_decks">Total Decks :</string>
    <string name="edit_card">Edit Card</string>
    <string name="i_forgot">I forgot</string>
    <string name="hard">hard</string>
    <string name="easy">easy</string>
    <string name="very_easy">very easy</string>
    <string name="unseen">unseen</string>
    <string name="first_seen">First seen</string>
    <string name="second_seen">second seen</string>
    <string name="third_seen">third seen</string>
    <string name="restore_database">restore database</string>
    <string name="backup_database">backup database</string>
</resources>